# snake-opengl-sdl

./: .gitignore  CMakeLists.txt  CMakeLists_example.txt  README.md  main.cpp
src/: Main.cpp
src/Common/: CMakeLists.txt  Log.cpp  Log.h  OpenGl.h
src/GameObject/: CMakeLists.txt  GameObject.cpp  GameObject.h
src/InputSystem/: CMakeLists.txt  InputSystem.cpp  InputSystem.h
src/Shaders/: CMakeLists.txt  Shader.cpp  Shader.h
src/Shaders/Basic/: CMakeLists.txt
src/Shaders/basic/: BasicShader.cpp  BasicShader.frag  BasicShader.h  BasicShader.vert
src/SimpleBox/: CMakeLists.txt  SimpleBox.cpp  SimpleBox.h
src/SnakeGame/: CMakeLists.txt  SnakeGame.cpp  SnakeGame.h
